--- a/src/AutoSeviceClient/AutoSeviceClient/Pages/_Host.cshtml
+++ b/src/AutoSeviceClient/AutoSeviceClient/Pages/_Host.cshtml
@@ -16,7 +16,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="AutoSeviceClient.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -33,6 +33,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="css/bootstrap/MudBlazor.min.js"></script>
 </body>
 </html>
