--- a/src/AutoSeviceClient/AutoSeviceClient/Shared/NavMenu.razor
+++ b/src/AutoSeviceClient/AutoSeviceClient/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter" >
+            <NavLink class="nav-link" href="client" >
                 <span class="oi oi-home" aria-hidden="true"></span> Клиенты
             </NavLink>
         </li>
@@ -28,7 +28,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="about">
                 <span class="oi oi-plus" aria-hidden="true"></span> Склад
             </NavLink>
         </li>
